--- a/Streamliner/Streamliner.csproj
+++ b/Streamliner/Streamliner.csproj
@@ -12,6 +12,8 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/Codeh4ck/Streamliner</PackageProjectUrl>
     <PackageReleaseNotes>Deploying package to NuGet</PackageReleaseNotes>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
