--- a/Streamliner/Streamliner.csproj
+++ b/Streamliner/Streamliner.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Authors>Nikolas Andreou</Authors>
     <Product>Streamliner</Product>
-    <Description>A .NET 6 library that enables the creation of code workflows. Streamliner creates a directed acyclic graph which represents the workflow in separate, single responsibility blocks.</Description>
+    <Description>A .NET 6 library that enables the creation of code workflows. Streamliner creates a directed acyclic graph which represents the workflow in separate, single responsibility blocks running in parallel.</Description>
     <Copyright>Copyright ©2021 Nikolas Andreou. All rights reserved.</Copyright>
     <RepositoryUrl>https://github.com/Codeh4ck/Streamliner</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
@@ -12,9 +12,9 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/Codeh4ck/Streamliner</PackageProjectUrl>
     <PackageReleaseNotes>Deploying package to NuGet</PackageReleaseNotes>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <AssemblyVersion>1.3.1</AssemblyVersion>
     <FileVersion>1.3.0.0</FileVersion>
-    <Version>1.3.0</Version>
+    <Version>1.3.1</Version>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
