Add more ignored entries

--- a/.gitignore
+++ b/.gitignore
@@ -350,6 +350,8 @@ MigrationBackup/
 .ionide/
 
 # User-specific stuff
+.idea/
+.idea/**
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
