Update test flow example with Partitioner

--- a/Streamliner.TestFlow/Streamliner.TestFlow.csproj
+++ b/Streamliner.TestFlow/Streamliner.TestFlow.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Streamliner\Streamliner.csproj" />
+    </ItemGroup>
+
 </Project>
