--- a/Streamliner/Streamliner.csproj
+++ b/Streamliner/Streamliner.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.0;net46;net461;net462;net47;net471;net472;net6.0;net7.0</TargetFrameworks>
+	  <TargetFrameworks>net6.0;net7.0;netstandard2.0;net47;net471;net472;net8.0</TargetFrameworks>
     <Authors>Nikolas Andreou</Authors>
     <Product>Streamliner</Product>
     <Description>A .NET library that enables the creation of code workflows. Streamliner creates a directed acyclic graph which represents the workflow in separate, single responsibility blocks running in parallel.</Description>
-    <Copyright>Copyright ©2021-2023 Nikolas Andreou. All rights reserved.</Copyright>
+    <Copyright>Copyright ©2021-2024 Nikolas Andreou. All rights reserved.</Copyright>
     <RepositoryUrl>https://github.com/Codeh4ck/Streamliner</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -14,7 +14,7 @@
     <PackageReleaseNotes>Deploying package to NuGet</PackageReleaseNotes>
     <AssemblyVersion>2.1</AssemblyVersion>
     <FileVersion>2.1</FileVersion>
-    <Version>2.1</Version>
+    <Version>2.2</Version>
     <SignAssembly>false</SignAssembly>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
